# vex-rs-lib

./: Cargo.toml  README.md  armv7a-vex-eabi.json  rustfmt.toml
.cargo/: config
src/: controller.rs  coordinates.rs  lib.rs  math.rs  motor.rs  odometry.rs  pid.rs  pure_pursuit.rs  tank_drive.rs  x_drive.rs
